# test

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: lint.txt
docs/: mermaid.md
scripts/: generate_sample_data.py
src/data_processing/: cleaning.py  ingestion.py  validation.py
